tests/ui/enum_inconsistent.stderr
error: expected u16, found i64
 --> tests/ui/enum_inconsistent.rs:5:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
5 |         B = 2i64,
  |         ^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
